--- a/reactRouter/src/index.css
+++ b/reactRouter/src/index.css
@@ -20,6 +20,11 @@ a {
   font-weight: 500;
   color: #646cff;
   text-decoration: inherit;
+  padding: 5px;
+}
+a.active {
+  font-weight: bold;
+  font-size: 23px ;
 }
 a:hover {
   color: #535bf2;
