--- a/reactRouter/src/index.css
+++ b/reactRouter/src/index.css
@@ -24,10 +24,15 @@ a {
 }
 a.active {
   font-weight: bold;
-  font-size: 23px ;
+  font-size: 23px;
 }
 a:hover {
   color: #535bf2;
+}
+
+.main-nav {
+  background-color: lightgray;
+  padding: 20px;
 }
 
 body {
